--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -768,112 +768,59 @@ Paci, F., Ferrini, R., Sun, Y. and Bertino, E. (2008) 'Authorization and User Fa
 \bibitem[\protect\citeauthoryear{Narodytska and Bacchus}{2014}]{NarodytskaN}
 Narodytska, N. and Bacchus, F. (2014) 'Maximum Satisfiability Using Core-Guided MAXSAT Resolution', {\it Proc. of the Conf. on Artificial Intelligence}, pp.2717--2723
 
+\bibitem[\protect\citeauthoryear{Barth and Putnam}{1995}]{Barth1995}
+Barth, P. and Putnam, D. (1995) 'Enumeration Algorithm for Linear Pseudo-Boolean Optimization', {\it Technical Report MPI-I-95-2-003, Max Plank Institute for Computer Science}
 
-\bibitem[\protect\citeauthoryear{Network for Translational Research (NTR): Optical Imaging in
-Multimodality
-Platforms}{http://imaging.cancer.gov/programsandresources/speci\break
-alizedinitiatives/ntroi}]{ntr} Network for Translational Research
-(NTR): Optical Imaging in Multimodality Platforms,
-http://imaging.cancer.gov/programsandresources/specializedinitiatives/ntroi
+\bibitem[\protect\citeauthoryear{Manquinho and Marques-Silva}{1995}]{Vasco2005}
+Manquinho, V. and Marques-Silva, J. (1995) 'Effective Lower Bounding Techniques for Pseudo-Boolean Optimization', {\it IST/INESC-ID, Technical University of Lisbon, Portugal}
 
-\bibitem[\protect\citeauthoryear{Piwowar~et~al.}{2008}]{piwowar08culture}
-Piwowar, H., Becich, M., Bilofsky, H. and Crowley, R. (2008) `PLoS
-medicine', {\it Sept, No. 9, Towards a Data Sharing Culture:
-Recommendations for Leadership from Academic Health Centers},
-Vol.~5.
+\bibitem[\protect\citeauthoryear{Microsoft Research}{2015}]{Z3API}
+Microsoft Research (2015) 'Z3 API - Source code and documentation', {\it https://z3.codeplex.com/}, Accessed in 18th August 2015
 
-\bibitem[\protect\citeauthoryear{Birnholtz et al.}{2003}]{birnholtz03data}
-Birnholtz, J.P. and Bietz, M.J. (2003) `Data at work: supporting
-sharing in science and engineering', {\it GROUP}, pp.339--348.
+\bibitem[\protect\citeauthoryear{Cormen et al.}{2009}]{Cormem}
+Cormen, T., Leiserson, C., Rivest, R. and Stein, C. (2009) 'Introduction to Algorithms', {\it MIT Press}, Vol. I-XIX, pp.1--1292
 
-\bibitem[\protect\citeauthoryear{Data Sharing \& Intellectual Capital (DSIC) Workspace}
-{https://cabig.nci.nih.gov/working\_groups/DSIC\_SLWG}]{dsic} Data
-Sharing \& Intellectual Capital (DSIC) Workspace,
-https://cabig.nci.nih.gov/working\_groups/DSIC\_SLWG
+\bibitem[\protect\citeauthoryear{Dagum and Menon}{1998}]{Dagum1998}
+Dagum, L. and Menon, R. (1998) 'OpenMP: An Industry-Standard API for Shared-Memory Programming', {\it Proc. of the Intl. Conf. on Computational Science Engineering}, pp.46--55
 
-\bibitem[\protect\citeauthoryear{Getting Connected with
-caBIG}{https://cabig.nci.nih.gov/getting\_connected/}]{cabigconnected}
-Getting Connected with caBIG, https://cabig.nci.nih.gov/\break
-getting\_connected/
+\bibitem[\protect\citeauthoryear{MathWorks}{2013}]{TheMathWorks2013}
+MathWorks (2013) 'MATLAB (version R2013a)'
 
-\bibitem[\protect\citeauthoryear{Digital Imaging and Communications in Medicine
-(DICOM)}{http://medical.nema.org/}]{dicom} Digital Imaging and
-Communications in Medicine (DICOM), http://medical.nema.org/
+\bibitem[\protect\citeauthoryear{Tranquillo}{2011}]{Tranquillo2011}
+Tranquillo, J. (2011) 'Matlab for Engineering and the Life Sciences', {\it Synthesis Lectures on Engineering. Morgan Claypool}
 
-\bibitem[\protect\citeauthoryear{The Cancer Genome Atlas (TCGA) Data Portal}{http://cancergenome.nih.gov/dataportal}]{tcga}
-The Cancer Genome Atlas (TCGA) Data Portal,
-http://cancergenome.nih.gov/dataportal
+\bibitem[\protect\citeauthoryear{Hong and Cai}{2010}]{Hong2010}
+Hong, L. and Cai, J. (2010) 'The application guide of mixed programming between MATLAB and other programming languages', {\it Proc. of the Intl. Conf. on Computer and Automation Engineering}, pp.185--189
 
-\bibitem[\protect\citeauthoryear{National Biomedical Imaging
-Archive}{https://cabig.nci.nih.gov/tools/NCIA}]{nbia} National
-Biomedical Imaging Archive, https://cabig.nci.nih.gov/tools/NCIA
+\bibitem[\protect\citeauthoryear{Cordeiro and Fischer}{2011}]{Cordeiro2011}
+Cordeiro, L. and Fischer, B. (2011) 'Verifying multi-threaded software using SMT-based context-bounded model checking', {\it Proc. of the Intl. Conf. on Software Engineering}, pp.331--340
 
-\bibitem[\protect\citeauthoryear{caBIG: cancer Biomedical Informatics Grid}{http://caBIG.nci.nih.gov/}]{cabig}
-caBIG: cancer Biomedical Informatics Grid, http://caBIG.nci.nih.gov/
+\bibitem[\protect\citeauthoryear{Teich}{2012}]{Teich2012}
+Teich, J. (2012) 'Hardware/Software Codesign: The Past, the Present, and Predicting the Future', {\it Proc. of the IEEE, Special Centennial Issue}, Vol. 100, pp.1411--1430
 
-\bibitem[\protect\citeauthoryear{Biomedical Informatics Research Network}{
-http://www.nbirn.net/}]{birn}
-Biomedical Informatics Research Network, http://www.nbirn.net/
+\bibitem[\protect\citeauthoryear{Guthaus et al.}{2011}]{Guthaus2001}
+Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T. and Brown, R. (2011) 'MiBench: A free, commercially representative embedded benchmark suite', {\it Proc. of the annual workshop on workload characterization}, pp.3--14
 
-\bibitem[\protect\citeauthoryear{Cyberinfrastructure for the Biological Sciences: Plant Science
-Cyberinfrastructure Collaborative
-(PSCIC)}{http://www.nsf.gov/pubs/2006/nsf06594/nsf06594.htm}]{pscic}
-Cyberinfrastructure for the Biological Sciences: Plant Science
-Cyberinfrastructure Collaborative (PSCIC),
-http://www.nsf.gov/pubs/2006/nsf06594/nsf06594.htm
+\bibitem[\protect\citeauthoryear{Arato et al.}{2005}]{Arato2005}
+Arato, P., Mann, A., Orban, A. (2005) 'Algorithmic aspects of hardware/software partitioning', {\it ACM Transactions on Design Automation of Electronic Systems}, Vol. 1, No. 1, pp.136--156
 
-\bibitem[\protect\citeauthoryear{MIRC}{http://mirc.rsna.org}]{mirc}
-MIRC, http://mirc.rsna.org
+\bibitem[\protect\citeauthoryear{Holzmann et al.}{2011}]{Holzmann2011}
+Holzmann, G., Joshi, R. and Groce, A. (2011) 'Swarm Verification Techniques', {\it IEEE Transactions on Software Engineering}, Vol. 37, No. 6, pp.845--857
 
-\bibitem[\protect\citeauthoryear{Foster and
-Iamnitchi}{2003}]{foster03p2p2grid} Foster, I. and Iamnitchi, A.
-(2003) `On death, taxes, and the convergence of peer-to-peer and
-grid computing', {\it IPTPS'03}.
+\bibitem[\protect\citeauthoryear{Wintersteiger et al.}{2009}]{Wintersteiger2009}
+Wintersteiger, C., Hamadi, Y. and Moura, L. (2009) 'A Concurrent Portfolio Approach to SMT Solving', {\it Proc. of the Intl. Conf. on Computer-Aided Verification}, Vol. 5643, pp.715--720
 
-\bibitem[\protect\citeauthoryear{Keidl et al.}{2002}]{keidl02metadata}
-Keidl, M., Kreutz, A., Kemper, A. and Kossmann, D. (2002) `A publish
-{\&} subscribe architecture for distributed metadata management',
-{\it ICDE}.
+\bibitem[\protect\citeauthoryear{Qawasmeh et al.}{2014}]{Qawasmeh2014}
+Qawasmeh, A., Malik, A. and Chapman, B. (2014) 'OpenMP task scheduling analysis via OpenMP runtime API and tool visualization', {\it Proc. of the Intl. Symp. on Parallel Distributed processing}, pp.1049--1058
 
-\bibitem[\protect\citeauthoryear{Taylor and Ives}{2006}]{taylor06reconcile}
-Taylor, N.E. and Ives, Z.G. (2006) `Reconciling while tolerating
-disagreement in collaborative data sharing', {\it SIGMOD}.
+\bibitem[\protect\citeauthoryear{Pavlinovi et al.}{2015}]{Pavlinovic2015}
+Pavlinovi, Z., King, T. and Wies, T. (2015) 'Practical SMT-Based Type Error Localization', {\it Proc. of the Intl. Conf. on Functional Programming}, pp.412--423
 
-\bibitem[\protect\citeauthoryear{Rader and Wash}{2008}]{rader08tag}
-Rader, E.J. and Wash, R. (2008) {\it CSCW}, pp.239-248, Influences
-on tag choices in del.icio.us.
+\bibitem[\protect\citeauthoryear{Sebastiani and Trentin}{2015}]{Patrick2015}
+Sebastiani, R. and Trentin, P. (2015) 'OptiMathSAT: A Tool for Optimization Modulo Theories', {\it Proc. of the Intl. Conf. on Computer Aided Verification}, Vol. 9206, pp.447--454
 
-\bibitem[\protect\citeauthoryear{Halevy et~al.}{2006}]{halevy06integration}
-Halevy, A., Rajaraman, A. and Ordille, J. (2006) {\it VLDB, Data
-integration: the teenage years},
-http://portal.acm.org/citation.cfm?id=1182635.1164130
-
-\bibitem[\protect\citeauthoryear{Doan and Halevy}{2005}]{doan05semantic}
-Doan, A. and Halevy, A.Y. (2005) Semantic Integration Research in
-the Database Community: A Brief Survey, {\it AI Magazine}, Vol. 26,
-No. 1, pp.83--94.
-
-\bibitem[\protect\citeauthoryear{Beynon-Davies et~al.}{1997}]{beynon97}
-Beynon-Davies, P., Bonde, L., McPhee, D. and Jones, C.B. (1997) `A
-collaborative schema integration system', {\it Comput. Supported
-Coop. Work}, Vol. 6, No. 1, Norwell, MA, USA, pp.1--18, issn =
-0925-9724.
-
-\bibitem[\protect\citeauthoryear{Wang and Vergara-Niedermayr}{2008}]{wang08com}
-Wang, F. and Vergara-Niedermayr, C. (2008) `Collaboratively Sharing
-Scientific Data', {\it CollaborateCom}, pp.805--823.
-
-\bibitem[\protect\citeauthoryear{Chin and Lansing}{2004}]{chin04context} Chin Jr., G. and Lansing,
-C.S. (2008) `Capturing and Supporting Contexts for Scientific Data
-Sharing via the Biological Sciences Collaboratory', {\it CSCW}, ISBN
-1-58113-810-5.
-
-\bibitem[\protect\citeauthoryear{W3C XML Query (XQuery)}{http://www.w3.org/XML/Query}]{xquery}
-W3C XML Query (XQuery), http://www.w3.org/XML/Query
-
-\bibitem[\protect\citeauthoryear{Wang et al.}{2009}]{wang09security}
-Wang, F., Hussels, P. and Liu, P. (2009) `Securely and flexibly
-sharing a biomedical data management system', {\it SPIE}.
+\bibitem[\protect\citeauthoryear{Holzmann et al.}{2011}]{Holzmann11}
+Holzmann, G., Joshi, R. and Groce, A. (2011) 'Swarm Verification Techniques', {\it IEEE Transactions Software Engineering}, Vol. 9206, pp.845--857
 
  \end{thebibliography}
 \end{document}
