--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -537,6 +537,7 @@ All experiments were conducted on an otherwise idle Intel Core i$7$-$2600$ ($8$-
 %----------------------------------------------
 To perform the experiments, some benchmarks provided by~\cite{Mann2007} were used, as shown in Table~\ref{tab:Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench~\cite{Guthaus2001}. The clustering and fuzzy benchmarks are designed from~\cite{Mann2007} and are significantly large benchmarks. From the same authors, very complex benchmarks to test the limits of the applicability of techniques were used (RC$6$ and Mars).
 
+\vspace{5 mm}
 \hspace{-5 mm}
 \begin{minipage}{\linewidth}
 \centering
@@ -825,6 +826,9 @@ Sebastiani, R. and Trentin, P. (2015) 'OptiMathSAT: A Tool for Optimization Modu
 
 \bibitem[\protect\citeauthoryear{Holzmann \textit{et al.}}{2011}]{Holzmann11}
 Holzmann, G., Joshi, R. and Groce, A. (2011) 'Swarm Verification Techniques', {\it IEEE Transactions Software Engineering}, Vol. 9206, pp.845--857
+
+\bibitem[\protect\citeauthoryear{Holzmann}{2012}]{Holzmann2012}
+Holzmann, G. (2012) 'Parallelizing the spin model checker', {\it Proc. of the Intl. Symp. on Model Checking Software}, Vol. 7385, pp.155--171
 
 \end{thebibliography}
 
