--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -598,7 +598,7 @@ Note further that all multi-core ESBMC implementations produce better results th
 \bottomrule[1.5pt]
 \rowcolors{1}{}{lightgray}
 
-\multirow{4}{*}{\textbf{\normalsize{Solution}}}
+\multirow{4}{*}{\textbf{\normalsize{Exact Solution}}}
 & & & & & & & & & \\
 &  \normalsize{Hp}   &  \normalsize{15}   &  \normalsize{47}   &  \normalsize{31}   &  \normalsize{241} &  \normalsize{692} &  \normalsize{13820}   &  \normalsize{876} \\
 &  \normalsize{Sp}   &  \normalsize{19}   &  \normalsize{4}   &  \normalsize{19}   &  \normalsize{46}   &  \normalsize{533}    &  \normalsize{4231}   &  \normalsize{297}  \\
